--- a/src/app/components/signup/signup.component.html
+++ b/src/app/components/signup/signup.component.html
@@ -66,8 +66,11 @@
 								<option value="" disabled selected> Select a specialty</option>
 								<option *ngFor="let spec of specialties" value="{{spec.id}}">{{spec.value}}</option>
 							</select>
-							<div class="input-group-prepend"><span class="input-group-text rounded-start-0"><i
-										class="bi bi-box-arrow-down"></i></span></div>
+							<div class="input-group-prepend">
+								<span class="input-group-text rounded-start-0">
+									<i class="bi bi-box-arrow-down"></i>
+								</span>
+							</div>
 						</div>
 					</div>
 				</div>
@@ -122,6 +125,11 @@
 				<button class="btn btn-primary btn-lg btn-block" type="submit"
 					[disabled]="signUpForm.invalid || !imgsUploaded()">Submit survey</button>
 
+				<div class="nav justify-content-center">
+					<div class="nav-item">
+						<a class="nav-link active text-decoration-underline" routerLink="/login">Already a member?</a>
+					</div>
+				</div>
 			</form>
 		</div>
 	</div>
