--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,1 +1,49 @@
-<p>home works!</p>
+<div class="hero_area">
+	<div class="hero_bg_box">
+		<img src="../../../assets/hero-bg.png" alt="">
+	</div>
+
+	<div class="container mt-3">
+		<div class="row">
+			<div class="col-md-7">
+				<div class="detail-box">
+					<h1 class="text-light"><b>We Provide Best Healthcare</b></h1>
+					<p class="text-light fs-5">
+						We are a diagnostic center with medical offices specializing in various medical fields. We offer
+						advanced technology in preventive imaging studies for early diagnosis, allowing for greater effectiveness in
+						future treatments, ultimately enhancing the quality of life.
+					</p>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
+
+
+<!-- about section -->
+
+<section class="about_section layout_margin-bottom">
+	<div class="container">
+		<div class="row">
+			<div class="col-md-6">
+				<div class="img-box">
+					<img src="../../../assets/about-img.jpg" alt="">
+				</div>
+			</div>
+			<div class="col-md-6">
+				<div class="detail-box">
+					<div class="heading_container">
+						<h2>About Us</h2>
+					</div>
+					<p class="fs-6">
+						We have multiple fully equipped medical offices connected to the imaging study rooms, the laboratory, and
+						the
+						cardiology department, all within a warm and digital environment.
+					</p>
+				</div>
+			</div>
+		</div>
+	</div>
+</section>
+
+<!-- end about section -->
