--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,6 +6,7 @@
 			<li class="nav-item"><a class="nav-link" routerLink="/home">Home</a></li>
 			<li class="nav-item"><a class="nav-link" *ngIf="isLogged" routerLink="/departments">Departments</a></li>
 			<li class="nav-item"><a class="nav-link" *ngIf="isLogged" routerLink="/doctors">Doctors</a></li>
+			<li class="nav-item"><a class="nav-link" *ngIf="isAdmin" routerLink="/users">Users</a></li>
 			<li class="nav-item"><a class="nav-link" *ngIf="isLogged" routerLink="/account">Account</a></li>
 			<li class="nav-item"><a class="nav-link" *ngIf="!isLogged" routerLink="/login">Sign In</a></li>
 		</ul>
