--- a/src/app/components/signup/signup.component.html
+++ b/src/app/components/signup/signup.component.html
@@ -4,12 +4,18 @@
 			<h2 class="mb-3 font-weight-normal ">Create an account</h2>
 			<form class="needs-validation" [formGroup]="signUpForm" (ngSubmit)="signUp()">
 				<div class="d-flex justify-content-center">
-					<div class="switch">
-						<input id="role-toggle" class="check-toggle check-toggle-round-flat" type="checkbox"
-							formControlName="roleToggle" (change)="roleChange()">
-						<label for="role-toggle"></label>
-						<span class="on">Specialist</span>
-						<span class="off">Patient</span>
+					<div class="btn-group role-radio-group">
+						<input type="radio" class="btn-check" id="spec_radio" value="specialist" formControlName="roleRadio"
+							(change)="roleChange()" />
+						<label class="btn btn-primary" for="spec_radio">Specialist</label>
+
+						<input type="radio" class="btn-check" id="pat_radio" value="patient" checked formControlName="roleRadio"
+							(change)="roleChange()" />
+						<label class="btn btn-primary" for="pat_radio">Patient</label>
+
+						<input type="radio" class="btn-check" id="admin_radio" value="admin" formControlName="roleRadio"
+							(change)="roleChange()" />
+						<label class="btn btn-primary" for="admin_radio">Admin</label>
 					</div>
 				</div>
 
@@ -34,7 +40,7 @@
 							[class]="signUpForm.controls['age'].errors !== null && signUpForm.controls['age'].touched ? 'border-danger border-2' : ''">
 					</div>
 
-					<div class="col-md-4 mb-3">
+					<div class="mb-3" [class]="signUpForm.get('roleRadio')?.value !== 'admin' ? 'col-md-4' : 'col-md-10'">
 						<label for="idNo">ID Number</label>
 						<div class="input-group">
 							<div class="input-group-prepend"><span class="input-group-text rounded-end-0">#</span></div>
@@ -43,7 +49,7 @@
 						</div>
 					</div>
 
-					<div class="col-md-6 mb-3" *ngIf="signUpForm.get('roleToggle')?.value">
+					<div class="col-md-6 mb-3" *ngIf="signUpForm.get('roleRadio')?.value === 'patient'">
 						<label for="healthPlan">Healthcare plan</label>
 						<div class="input-group">
 							<select class="form-control text-center" id="healthPlan" formControlName="select"
@@ -57,7 +63,7 @@
 						</div>
 					</div>
 
-					<div class="col-md-6 mb-3" *ngIf="!signUpForm.get('roleToggle')?.value">
+					<div class="col-md-6 mb-3" *ngIf="signUpForm.get('roleRadio')?.value === 'specialist'">
 						<label for="specialty">Specialty</label>
 						<div class="input-group">
 							<select class="form-control text-center" id="healthPlan" formControlName="select"
@@ -77,7 +83,8 @@
 
 				<hr class="mb-4">
 				<div class="row">
-					<div class="custom-file" [class]="signUpForm.get('roleToggle')?.value ? 'col-md-6' : 'col-md-12'">
+					<div class="custom-file"
+						[class]="signUpForm.get('roleRadio')?.value === 'patient' ? 'col-md-6' : 'col-md-12'">
 						<div class="input-group">
 							<div class="input-group-prepend"><span
 									class="input-group-text rounded-end-0 d-flex justify-content-center"><i
@@ -87,7 +94,7 @@
 							<input type="file" class="form-control" accept="image/*" id="img1" (change)="imgUpload($event)">
 						</div>
 					</div>
-					<div class="custom-file col-md-6" *ngIf="signUpForm.get('roleToggle')?.value">
+					<div class="custom-file col-md-6" *ngIf="signUpForm.get('roleRadio')?.value === 'patient'">
 						<div class="input-group">
 							<div class="input-group-prepend"><span
 									class="input-group-text rounded-end-0 d-flex justify-content-center"><i
@@ -123,7 +130,7 @@
 				</div>
 
 				<button class="btn btn-primary btn-lg btn-block" type="submit"
-					[disabled]="signUpForm.invalid || !imgsUploaded()">Submit survey</button>
+					[disabled]="signUpForm.invalid || !imgsUploaded()">Sign Up</button>
 
 				<div class="nav justify-content-center">
 					<div class="nav-item">
