FULL LOGIN & GUARDS

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -37,8 +37,7 @@
 					</div>
 					<p class="fs-6">
 						We have multiple fully equipped medical offices connected to the imaging study rooms, the laboratory, and
-						the
-						cardiology department, all within a warm and digital environment.
+						the cardiology department, all within a warm and digital environment.
 					</p>
 				</div>
 			</div>
