--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,11 +4,10 @@
 		<a class="navbar-brand" routerLink="/home">La Clínica</a>
 		<ul class="navbar-nav ms-auto mb-2 mb-lg-0">
 			<li class="nav-item"><a class="nav-link" routerLink="/home">Home</a></li>
-			<li class="nav-item"><a class="nav-link" *ngIf="isLogged" routerLink="/departments">Departments</a></li>
-			<li class="nav-item"><a class="nav-link" *ngIf="isLogged" routerLink="/doctors">Doctors</a></li>
-			<li class="nav-item"><a class="nav-link" *ngIf="isAdmin" routerLink="/users">Users</a></li>
-			<li class="nav-item"><a class="nav-link" *ngIf="isLogged" routerLink="/account">Account</a></li>
-			<li class="nav-item"><a class="nav-link" *ngIf="!isLogged" routerLink="/login">Sign In</a></li>
+			<li class="nav-item"><a class="nav-link" routerLink="/departments">Departments</a></li>
+			<li class="nav-item"><a class="nav-link" routerLink="/doctors">Doctors</a></li>
+			<li class="nav-item"><a class="nav-link" *ngIf="isAdmin()" routerLink="/users">Users</a></li>
+			<li class="nav-item"><a class="nav-link" routerLink="/account">Account</a></li>
 		</ul>
 	</div>
 </nav>
