--- a/src/app/components/account/account.component.html
+++ b/src/app/components/account/account.component.html
@@ -18,6 +18,7 @@
 					<div class="usr-data">
 						<h1 class="display-0 fw-bold" id="usr-data-username">{{ user.firstName }} {{ user.lastName }}</h1>
 						<p class="fs-4" id="usr-data-email">{{ user.email }}</p>
+						<small id="usr-data-email">{{ user.role | uppercase }}</small>
 					</div>
 				</div>
 				<div class="feature bg-primary bg-gradient text-white rounded-3 mb-4 mt-n4">
