--- a/src/app/components/signup/signup.component.html
+++ b/src/app/components/signup/signup.component.html
@@ -142,7 +142,7 @@
 				<div class="mb-3">
 					<label for="email">Email adress</label>
 					<div class="input-group">
-						<div class="input-group-prepend"><span class="input-group-text rounded-end-0">@</span></div>
+						<div class="input-group-prepend"><span class="input-group-text rounded-end-0">&#64;</span></div>
 						<input type="email" class="form-control" id="email" name="email" placeholder="you@example.com" formControlName="email"
 							[class]="signUpForm.controls['email'].errors !== null && signUpForm.controls['email'].touched ? 'border-danger border-2' : ''">
 					</div>
