--- a/src/app/components/user-list/user-list.component.html
+++ b/src/app/components/user-list/user-list.component.html
@@ -14,7 +14,7 @@
 				<td class="col-md-2">
 					<div class="d-flex align-items-center">
 						<div class="ms-3">
-							<p class="fw-bold mb-0">{{user.firstName}} {{user.lastName}}, {{user.age}} yo</p>
+							<p class="fw-bold mb-0">{{user.firstName}} {{user.lastName}}, {{user.age}}</p>
 							<p class="text-muted mb-0">{{user.email}}</p>
 						</div>
 					</div>
