--- a/src/app/components/account/account.component.css
+++ b/src/app/components/account/account.component.css
@@ -1,11 +1,3 @@
-.cm-4 {
-	margin: 1.5rem !important;
-	display: flex;
-	flex-direction: column;
-	flex-wrap: wrap;
-	align-items: center;
-}
-
 .display-0 {
 	font-size: calc(1.425rem + 2.1vw);
 	font-weight: 300;
@@ -28,7 +20,7 @@
 }
 
 .image-div {
-	display: inline-block;
+	display: inline-flex;
 	align-items: center;
 	justify-self: center;
 	width: 300px;
@@ -50,7 +42,6 @@
 	margin: 0;
 }
 
-.sign-out-btn {
+.bg-transparent {
 	background: transparent;
-	border: none;
 }
