--- a/src/app/components/account/account.component.html
+++ b/src/app/components/account/account.component.html
@@ -1,30 +1,50 @@
-<div class="main">
-	<header class="py-4">
-		<div class="container px-lg-5">
-			<div *ngIf="user" class="px-4 py-2 px-lg-5 bg-light rounded-3 text-center">
-				<div class="m-0 m-lg-5">
-					<div class="row">
-						<div [class]="user.imgUrl2 !== '' ? 'col-md-6' : 'col-md-12'">
-							<div class="image-div">
-								<img [src]="user.imgUrl1" alt="User_img1">
-							</div>
-						</div>
-						<div *ngIf="user.imgUrl2 !== ''" class="col-md-6">
-							<div class="image-div">
-								<img [src]="user.imgUrl2" alt="User_img2">
-							</div>
+<div class="main py-4">
+	<div class="container px-lg-5">
+		<div *ngIf="user" class="px-4 py-2 px-lg-5 bg-light rounded-3 text-center">
+			<div class="m-0 m-lg-5">
+				<div class="row">
+					<div class="align-items-center bg-light" [class]="user.imgUrl2 ? 'col-md-6' : 'col'">
+						<div class="image-div">
+							<img [src]="user.imgUrl1" alt="User_img1">
 						</div>
 					</div>
-					<div class="usr-data">
-						<h1 class="display-0 fw-bold" id="usr-data-username">{{ user.firstName }} {{ user.lastName }}</h1>
-						<p class="fs-4" id="usr-data-email">{{ user.email }}</p>
-						<small id="usr-data-email">{{ user.role | uppercase }}</small>
+					<div *ngIf="user.imgUrl2" class="col-md-6 align-items-center bg-light">
+						<div class="image-div">
+							<img [src]="user.imgUrl2" alt="User_img2">
+						</div>
 					</div>
 				</div>
-				<div class="feature bg-primary bg-gradient text-white rounded-3 mb-4 mt-n4">
-					<button class="sign-out-btn fw-semibold" (click)="signOut()">Log Out</button>
+				<div class="usr-data">
+					<h1 class="display-0 fw-bold" id="usr-data-username">{{ user.firstName }} {{ user.lastName }}</h1>
+					<p class="fs-4" id="usr-data-email">{{ user.email }}</p>
+					<small id="usr-data-email">{{ user.role | uppercase }}</small>
 				</div>
 			</div>
+
+			<div class="spec-shift" *ngIf="specialist">
+				<hr class="mb-lg-5">
+				<h3>Submit your work hours:</h3>
+				<div class="row">
+					<div class="col">
+						<label for="shiftStart">From</label>
+						<input type="time" class="form-control rounded-2" id="shiftStart" [(ngModel)]="specialist.shiftStart">
+					</div>
+					<div class="col">
+						<label for="shiftEnd">To</label>
+						<input type="time" class="form-control rounded-2" id="shiftEnd" [(ngModel)]="specialist.shiftEnd">
+					</div>
+				</div>
+
+				<div class="feature bg-primary-subtle rounded-3 mt-1">
+					<button class="bg-transparent border-0 fw-semibold text-dark"
+						[disabled]="this.specialist!.shiftStart < '08:30' || this.specialist!.shiftEnd > '18:30' || this.specialist!.shiftStart >= this.specialist!.shiftEnd"
+						(click)="saveShift()">Save</button>
+				</div>
+			</div>
+
+			<hr class="my-lg-3">
+			<div class="feature bg-primary rounded-3 mb-4">
+				<button class="bg-transparent border-0 fw-semibold text-white" (click)="signOut()">Log Out</button>
+			</div>
 		</div>
-	</header>
-</div>
+	</div>
