Admin creates Users

--- a/src/app/components/user-list/user-list.component.html
+++ b/src/app/components/user-list/user-list.component.html
@@ -43,3 +43,10 @@
 		</tbody>
 	</table>
 </div>
+
+<div class="new-user d-flex justify-content-center">
+	<hr class="my-2">
+	<span class="nav nav-link active text-decoration-underline mx-5" role="button" (click)="newAccount()">
+		Create new Account
+	</span>
+</div>
