--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,7 +7,7 @@
 			<li class="nav-item"><a class="nav-link" *ngIf="isNotSpec()" routerLink="/new-appointment">New Appointment</a></li>
 			<li class="nav-item"><a class="nav-link" routerLink="/appointments">Appointments</a></li>
 			<li class="nav-item"><a class="nav-link" *ngIf="isAdmin()" routerLink="/users">Users</a></li>
-			<li class="nav-item"><a class="nav-link" routerLink="/account">Account</a></li>
+			<li class="nav-item"><a class="nav-link" role="button" (click)="accountClick()">Account</a></li>
 		</ul>
 	</div>
 </nav>
