--- a/src/app/components/specialist-not-enabled/specialist-not-enabled.component.html
+++ b/src/app/components/specialist-not-enabled/specialist-not-enabled.component.html
@@ -1,10 +1,10 @@
 <div class="vh-100 background py-10">
 	<div class="container text-center bg-white mw-25 py-3 rounded">
-		<h1>Welcome!</h1>
+		<h1>Welcome Doctor!</h1>
 		<h2>Wait to be enabled!</h2>
 		<img src="../../../favicon.ico" height="100vh" width="auto" alt="clinica_logo">
 
-		<p class="fs-5">We're excited to have you get started. First, an administrator has to enable your account.</p>
+		<p class="fs-5">Before you can take any appointments, an administrator has to enable your account.</p>
 
 		<div class="nav justify-content-center">
 			<div class="nav-item">
