--- a/src/app/components/account/account.component.html
+++ b/src/app/components/account/account.component.html
@@ -15,7 +15,7 @@
 					</div>
 				</div>
 				<div class="usr-data">
-					<h1 class="display-0 fw-bold" id="usr-data-username">{{ user.firstName }} {{ user.lastName }}</h1>
+					<h1 class="display-0 fw-bold" id="usr-data-username">Dr. {{ user.firstName }} {{ user.lastName }}</h1>
 					<p class="fs-4" id="usr-data-email">{{ user.email }}</p>
 					<small id="usr-data-email">{{ user.role | uppercase }}</small>
 				</div>
