--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
 		<a class="navbar-brand" routerLink="/home">La Clínica</a>
 		<ul class="navbar-nav ms-auto mb-2 mb-lg-0">
 			<li class="nav-item"><a class="nav-link" routerLink="/home">Home</a></li>
-			<li class="nav-item"><a class="nav-link" *ngIf="user && user.role !== 'specialist'" routerLink="/new-appointment">New Appointment</a></li>
+			<li class="nav-item"><a class="nav-link" *ngIf="user && user.role !== 'specialist' && isValid" routerLink="/new-appointment">New Appointment</a></li>
 			<li class="nav-item"><a class="nav-link" *ngIf="isValid" routerLink="/appointments">Appointments</a></li>
 			<li class="nav-item"><a class="nav-link" *ngIf="user && user.role === 'admin'" routerLink="/users">Users</a></li>
 			<li class="nav-item"><a class="nav-link" *ngIf="isValid" routerLink="/account">Account</a></li>
