--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,18 @@
 /* You can add global styles to this file, and also import other style files */
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html,
+body {
+	height: 100%;
+}
+
+body {
+	margin: 0;
+	font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+
+.ng-select .ng-select-container {
+	border: 1px solid #dee2e6;
+	min-height: 37.6px;
+	border-bottom-left-radius: 0 !important;
+	border-top-left-radius: 0 !important;
+}
